--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -7,31 +7,29 @@ custom_edit_url: null
 ---
 import ThemedImage from '@theme/ThemedImage';
 
-Twenty is an Open Source CRM.
-<ThemedImage sources={{light: "./img/light-doc-preview.png", dark:"./img/dark-doc-preview.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+Twenty is an Open Source CRM that provides flexibility, tailored to your business needs. It helps you break free from vendor lock-in and limitations, and provides the tools needed to harness the full potential of your data while ensuring a sleek and effortlessly intuitive design that teams will love to use.  
+<ThemedImage sources={{light: "../img/light-doc-preview.png", dark:"../img/dark-doc-preview.png"}} style={{width:'100%', maxWidth:'800px'}}/>
 
 
 ## Why did we create Twenty?
-At first, CRM platforms were just for sales teams.
-But now, they've grown to cover more than just sales - they handle many aspects of running a business.
-This has often left in-house engineering teams out of the loop, making companies rely more on outside help to manage their CRM needs.
+We’ve spent thousands of hours grappling with traditional CRMs like Pipedrive and Salesforce to align them with our business needs, only to end up frustrated—customizations are complex and the closed ecosystems of these platforms can feel restrictive.
 
-Our team has a shared passion for crafting beautiful products with great attention to details.
-And we are starting this project with one key goal: to put the power back in the hands of the people who use CRM systems every day.
-We wish to create a tool that users will enjoy, and that engineers will want to make their own and customize for their company's specific needs.
+We felt the need for a CRM solution that empowers rather than constrains, which inspired us to create Twenty. We’re building the next-generation open-source CRM that offers you the flexibility to shape it according to your business objectives and meet your team’s unique needs. We’ve packed Twenty with powerful features to give you full control and help you win more deals. 
 
 ## Getting started
 
 There are three ways for you to get started with Twenty:
-- **Cloud:** the fastest and easiest way to try the app (it's free)
-- **Local:** if you're a developer and would like to experiment or contribute to the app
-- **Self-hosting:** if you want greater control over your data and want to run the app on your own server
+- **Cloud:** The fastest and easiest way to try the app (it's free)
+- **Local:** If you're a developer and would like to experiment or contribute to the app
+- **Self-hosting:** If you want greater control over your data and want to run the app on your own server
 
 See our [Getting Started](./start/getting-started/) guide to learn more.
 
 ## Contributing
-Contributions are what makes the open source community such an amazing place.  
-Code contributions through pull requests are most welcome.
-But it doesn't have to be code. You can also create an issue to report a bug you've spotted, join discussions or write documentation.
 
+Contributions are what makes the open source community such an amazing place.  
+
+Code contributions through pull request are most welcome. See our [local setup guide](../contributor/local-setup) to get started.
+
+You can also contribute by creating an issue to report a bug you've spotted, joining our discussions or writing documentation.
 
