Improved user guide, added CI vale for docs  (#2308)
* restructured user guide, minor fixes

* added index file for user guide

* github actions for vale

* testing workflow

* CI vale

* changes as per vale's suggestions

* set CI vale on pull request

* adding homebrew script to macos infra setup file

* fix CI errors

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* vale testing complete

* vale cleanup

* vale test

* vale test for github-pr-check

* vale test for github-pr-check

* vale test for github-pr-check

* vale test for github-pr-check

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* swizzled doc cards to add icons

* Align CI params to other CIs

---------

Co-authored-by: Félix Malfait <felix.malfait@gmail.com>

--- a/docs/docs/contributor/frontend/advanced/style-guide.mdx
+++ b/docs/docs/contributor/frontend/advanced/style-guide.mdx
@@ -86,7 +86,7 @@ const EmailField = ({ value }: EmailFieldProps) => (
 
 #### No Single Variable Prop Spreading in JSX Elements
 
-We discourage the use of single variable prop spreading in JSX elements, e.g., `{...props}`. This practice often leads to less readable and maintainable code as it's unclear what props are being passed down to the component.
+We discourage the use of single variable prop spreading in JSX elements, like `{...props}`. This practice often leads to less readable and maintainable code as it's unclear what props are being passed down to the component.
 
 ```tsx
 /* ❌ - Bad, spreads a single variable prop into the underlying component
