--- a/docs/docs/others/bug-and-requests.mdx
+++ b/docs/docs/others/bug-and-requests.mdx
@@ -6,7 +6,7 @@ sidebar_custom_props:
 ---
 
 ## Reporting Bugs
-To report a bug, please [create an issue on Github](https://github.com/twentyhq/twenty/issues/new).
+To report a bug, please [create an issue on GitHub](https://github.com/twentyhq/twenty/issues/new).
 
 ## Feature Requests
 
