--- a/docs/docs/user-guide/others/glossary.mdx
+++ b/docs/docs/user-guide/others/glossary.mdx
@@ -12,8 +12,8 @@ They are the two fundamental types of records that the CRM is built around:
 
 ### Pipelines
 A `Pipeline` is a way to track a business process. Pipelines are categorized within a *module* and have *stages*:
-- A **module** contains the logic for a certain business process (e.g. sales, recruiting).
-- **Stages** map the steps in your process (e.g. new, ongoing, won, lost).
+- A **module** contains the logic for a certain business process (for example: sales, recruiting).
+- **Stages** map the steps in your process (for example: new, ongoing, won, lost).
 
 ### Workspace
 A `Workspace` usually represents a company using Twenty.  
