--- a/docs/docs/user-guide/user-guide.mdx
+++ b/docs/docs/user-guide/user-guide.mdx
@@ -8,4 +8,30 @@ sidebar_custom_props:
   isSidebarRoot: true
 ---
 
-Coming soon!
+# Welcome to Twenty's User Guide
+
+This user guide is intended to help you learn how you can use Twenty to build the CRM you want. 
+
+In this quick-start guide, we'll walk you through the basics.
+
+## Quick Search 
+
+You'll see a search bar at the top of your sidebar. You can also bring up the command bar with the `cmd`/`ctrl` + `k` shortcut to quickly navigate through your workspace, and find people, companies, notes, and more. 
+
+The command bar also supports numerous shortcuts for navigation.  
+
+## Create Pre-filtered Views 
+
+Twenty allows you to add filters to see data that meets certain criteria and hides the rest. 
+
+To create a filter in your workspace, click Filter at the top right and select the attribute you'd like to filter your records by. Create your filter and then save changes in a new view by clicking `+ Create view`. 
+
+The filtered view is now available to your whole team.
+
+## Add Stages For Opportunities
+
+You can also add more stages to the opportunities board. 
+
+On the Opportunities page, click on Options, Stages, then `+ Add Stage`.
+
+You can also edit the stage by clicking on the name. 
