--- a/docs/docs/contributor/local-setup/troubleshooting.mdx
+++ b/docs/docs/contributor/local-setup/troubleshooting.mdx
@@ -23,8 +23,8 @@ Try installing [yarn classic](https://classic.yarnpkg.com/lang/en/)!
 
 ## Missing metadata schema
 
-During Twenty installation, your postgres database needs to be provisioned with right schemas, extensions and users.
+During Twenty installation, your postgres database needs to be provisioned with right schemas, extensions, and users.
 We provide [different ways](/contributor/local-setup/yarn-setup#step-2-set-up-postgresql-database) to set up your postgres instance.
 
-If you sucessfully run this provisioning, you should have `default` and `metadata` schemas in your database.
+If you successfully run this provisioning, you should have `default` and `metadata` schemas in your database.
 If you don't, make sure you don't have multiple postgres instance running on your computer.
