changes as per vale warnings (#2353)
* changes as per vale warnings

* changes acc to feedback

--- a/docs/docs/contributor/frontend/basics/design-system.mdx
+++ b/docs/docs/contributor/frontend/basics/design-system.mdx
@@ -6,5 +6,5 @@ sidebar_custom_props:
   icon: TbPaint
 ---
 
-We rely on our internal and custom design system, that is built on top of styled-components.
+The CRM depends on its internal and custom design system, constructed on top of styled-components.
 
