--- a/docs/docs/contributor/local-setup/local-setup.mdx
+++ b/docs/docs/contributor/local-setup/local-setup.mdx
@@ -11,26 +11,26 @@ import DocCardList from '@theme/DocCardList';
 
 
 
-Twenty is designed to be developer-friendly, and your local installation should be up and running in a few minutes.
+Twenty aims for developer-friendliness, and your local installation should be up and running in just a bit.
 
 <DocCardList/>
 
 ## Discord
 
-If you have any questions or need help, you can join our [Discord](https://twenty.com/discord) server.
+If you have any questions or need help, you can join Twenty's [Discord](https://twenty.com/discord) server.
 
 ## MacOS and Linux users
 
-We recommend using [yarn installation](/contributor/local-setup/yarn-setup) as this is the easiest way to get started.
-We also provide an easy way to run the project with [Docker](/contributor/local-setup/docker-setup) that you can use if you are familiar with containerized environments.
+It's better to use [yarn installation](/contributor/local-setup/yarn-setup) as this is the easiest way to get started.
+But there's also an easy way to run the project with [Docker](/contributor/local-setup/docker-setup) that you can use if you are familiar with containerized environments.
 
 ## Windows users
 
-Windows users can install the project through WSL2. We provide a [guide](/contributor/local-setup/yarn-setup) to help you get started.
+Windows users can install the project through WSL2. [This guide](/contributor/local-setup/yarn-setup) can help you get started.
 
 ## Project structure
 
-The repository is structured as follows:
+The repository has the following structure:
 ```
 twenty
 └───docs // contains this documentation
