--- a/docs/docs/contributor/local-setup/troubleshooting.mdx
+++ b/docs/docs/contributor/local-setup/troubleshooting.mdx
@@ -9,22 +9,22 @@ sidebar_custom_props:
 
 ## CR line breaks found [Windows]
 
-This is due to the linebreak characters of Windows and the git configuration. Try running:
+This is due to the line break characters of Windows and the git configuration. Try running:
 ```
 git config --global core.autocrlf false
 ```
 
 Then delete the repository and clone it again.
 
-## Extra yarn files are created
+## Extra yarn files 
 
 If you have extra files created by yarn  (`yarn.lock`, `.yarnrc.yml`, `.yarn`), you may have a yarn version issue.
 Try installing [yarn classic](https://classic.yarnpkg.com/lang/en/)!
 
 ## Missing metadata schema
 
-During Twenty installation, your postgres database needs to be provisioned with right schemas, extensions, and users.
-We provide [different ways](/contributor/local-setup/yarn-setup#step-2-set-up-postgresql-database) to set up your postgres instance.
+During Twenty installation, you need to provision your postgres database with the right schemas, extensions, and users.
+This documentation includes [different ways](/contributor/local-setup/yarn-setup#step-2-set-up-postgresql-database) to set up your postgres instance.
 
-If you successfully run this provisioning, you should have `default` and `metadata` schemas in your database.
-If you don't, make sure you don't have multiple postgres instance running on your computer.
+If you're successful in running this provisioning, you should have `default` and `metadata` schemas in your database.
+If you don't, make sure you don't have more than one postgres instance running on your computer.
