--- a/docs/docs/contributor/server/basics/custom-objects.mdx
+++ b/docs/docs/contributor/server/basics/custom-objects.mdx
@@ -7,7 +7,7 @@ sidebar_custom_props:
 
 Objects are structures that allow you to store data (records, attributes, and values) specific to an organization. Twenty provides both standard and custom objects.
 
-Standard objects are built-in objects with a set of attributes available for all users. Examples of standard objects in Twenty include Company and Person. Standard objects have standard fields that are also available for all Twenty users, like Company.displayName.
+Standard objects are in-built objects with a set of attributes available for all users. Examples of standard objects in Twenty include Company and Person. Standard objects have standard fields that are also available for all Twenty users, like Company.displayName.
 
 Custom objects are objects that you can create to store information that is unique to your organization. They are not built-in; members of your workspace can create and customize custom objects to hold information that standard objects aren't suitable for. 
 
@@ -22,21 +22,20 @@ Custom objects are objects that you can create to store information that is uniq
 
 ## How it works
 
-Custom objects are derived from metadata tables that determine the shape, name, and type of the objects. All this information is stored in the metadata schema database, consisting of tables:
+Custom objects come from metadata tables that determine the shape, name, and type of the objects. All this information is present in the metadata schema database, consisting of tables:
 
-- **DataSource**: Details where data is stored.
-- **Object**: Describes the object and is linked to a DataSource.
+- **DataSource**: Details where the data is present.
+- **Object**: Describes the object and links to a DataSource.
 - **Field**: Outlines an Object's fields and connects to the Object.
 
-To add a custom object, the workspaceMember will query the /metadata API. Then, the metadata is updated accordingly and a GraphQL schema is computed based on metadata and stored in a GQL cache for later use.
-
+To add a custom object, the workspaceMember will query the /metadata API. This updates the metadata accordingly and computes a GraphQL schema based on the metadata, storing it in a GQL cache for later use.
 <div style={{textAlign: 'center'}}>
     <img src="/img/contributor/add-custom-objects.jpeg" alt="Query the /metadata API to add custom objects" />
 </div>
 
 <br/>
 
-To fetch data, querying is done through the /graphql endpoint and goes through the Query Resolver. 
+To fetch data, the process involves making queries through the /graphql endpoint and passing them through the Query Resolver.
 <div style={{textAlign: 'center'}}>
     <img src="/img/contributor/custom-objects-schema.png" alt="Query the /graphql endpoint to fetch data" />
 </div>
