--- a/docs/docs/contributor/server/basics/folder-architecture.mdx
+++ b/docs/docs/contributor/server/basics/folder-architecture.mdx
@@ -7,7 +7,7 @@ sidebar_custom_props:
 ---
 
 
-Our backend directory structure is as follows:
+The backend directory structure is as follows:
 
 ```
 server
@@ -45,7 +45,7 @@ See [guards](https://docs.nestjs.com/guards) for more details.
 
 ## Health
 
-Includes a publicly available REST API (healthz) that returns a JSON to indicate if the database is working as it should. 
+Includes a publicly available REST API (healthz) that returns a JSON to confirm whether the database is working as expected.
 
 ## Metadata
 
