--- a/docs/docs/contributor/server/basics/overview.mdx
+++ b/docs/docs/contributor/server/basics/overview.mdx
@@ -5,7 +5,11 @@ sidebar_custom_props:
   icon: TbEyeglass
 ---
 
-We primarily use NestJS for our backend. We previously used to have Prisma as the ORM with a lot of auto-generated code under the hood. But since we want to offer flexibility so that users can create custom fields and custom objects, we needed something more low-level than Prisma to have more fine-grained control. This is why we switched to TypeORM. Here's what our tech stack now looks like. 
+Twenty primarily uses NestJS for the backend. 
+
+Prisma was the first choice as the ORM with a lot of auto-generated code under the hood. But to offer users flexibility and allow them to create custom fields and custom objects, something more low-level than Prisma made more sense to have more fine-grained control. This is why the project now uses TypeORM. 
+
+Here's what the tech stack now looks like. 
 
 ## Tech Stack
 
