--- a/docs/docs/contributor/server/server.mdx
+++ b/docs/docs/contributor/server/server.mdx
@@ -9,4 +9,4 @@ sidebar_custom_props:
 
 Welcome to the Backend Development section of the documentation.
 
-Here you will find information about the development process, the tools we use, and the best practices we follow.
+Here you will find information about the development process, the recommended tools, and the best practices you should follow.
