--- a/docs/docs/others/telemetry.mdx
+++ b/docs/docs/others/telemetry.mdx
@@ -6,10 +6,8 @@ sidebar_custom_props:
 ---
 
 # Data collected
-We record pageview events using a unique identifier for each workspace/user.
-We also collect the workspace's domain.
-We do not use cookies for telemetry.
-We do not collect email addresses, names, phone numbers, dates of birth, addresses, usernames, or other PII.
+Twenty records pageview events using a unique identifier for each workspace/user, and collects the workspace's domain.
+Twenty does not use cookies for telemetry or collect email addresses, names, phone numbers, dates of birth, addresses, usernames, or other PII.
 
 # Opting-out of telemetry
 To disable telemetry in your workspace, add the following line to your `server/.env` file:
