--- a/docs/docs/user-guide/integrations/generating-api-keys.mdx
+++ b/docs/docs/user-guide/integrations/generating-api-keys.mdx
@@ -16,11 +16,11 @@ To generate an API key:
 
 :::caution Note
 
-You API key contains sensitive information, and shouldn't be shared with services you don't fully trust. If leaked, it can be used maliciously. If you think your API key has been compromised, make sure you disable it and generate a new one.  
+Since your API key contains sensitive information, you shouldn't share it with services you don't fully trust. If leaked, someone can use it maliciously. If you think your API key is no longer secure, make sure you disable it and generate a new one.  
 
 :::
 
 
 ## Regenerating API key
 
-To regenerate an API key, simply click on the key you want to regenerate. You'll then be able to see a button to regenerate the API key. 
+To regenerate an API key, click on the key you want to regenerate. You'll then be able to see a button to regenerate the API key. 
