--- a/docs/docs/user-guide/user-guide.mdx
+++ b/docs/docs/user-guide/user-guide.mdx
@@ -10,15 +10,15 @@ sidebar_custom_props:
 
 # Welcome to Twenty's User Guide
 
-This user guide is intended to help you learn how you can use Twenty to build the CRM you want. 
+The purpose of this user guide is to help you learn how you can use Twenty to build the CRM you want. 
 
-In this quick-start guide, we'll walk you through the basics.
+This quick-start guide walks you through the basics.
 
 ## Quick Search 
 
-You'll see a search bar at the top of your sidebar. You can also bring up the command bar with the `cmd`/`ctrl` + `k` shortcut to quickly navigate through your workspace, and find people, companies, notes, and more. 
+You'll see a search bar at the top of your sidebar. You can also bring up the command bar with the `cmd`/`ctrl` + `k` shortcut to navigate through your workspace, and find people, companies, notes, and more. 
 
-The command bar also supports numerous shortcuts for navigation.  
+The command bar also supports other shortcuts for navigation.  
 
 ## Create Pre-filtered Views 
 
