--- a/docs/docs/contributor/frontend/advanced/best-practices.mdx
+++ b/docs/docs/contributor/frontend/advanced/best-practices.mdx
@@ -9,15 +9,15 @@ This document outlines the best practices you should follow when working on the 
 
 ## State management
 
-We use React and Recoil for state management.
+React and Recoil handle state management in the codebase.
 
 ### Use `useRecoilState` to store state
 
-We recommend that you create as many atoms as you need to store your state. 
+It's good practice to create as many atoms as you need to store your state. 
 
 :::tip 
 
-It's better to use additional atoms than trying to be too concise with props drilling.
+It's better to use extra atoms than trying to be too concise with props drilling.
 
 :::
 
@@ -43,33 +43,33 @@ export const MyComponent = () => {
 
 ### Do not use `useRef` to store state
 
-We do not recommend using `useRef` to store state. 
+Avoid using `useRef` to store state. 
 
 If you want to store state, you should use `useState` or `useRecoilState`.
 
-We recommend seeing [how to manage re-renders](#managing-re-renders) if you feel like you need `useRef` to prevent some re-renders from happening.
+See [how to manage re-renders](#managing-re-renders) if you feel like you need `useRef` to prevent some re-renders from happening.
 
 ## Managing re-renders
 
 Re-renders can be hard to manage in React.
 
-We provide you with some rules that we follow to avoid unnecessary re-renders.
+Here are some rules to follow to avoid unnecessary re-renders.
 
-Keep in mind that re-renders can **always** be avoided by understanding their cause.
+Keep in mind that you can **always** avoid re-renders by understanding their cause.
 
 ### Work at the root level
 
-We made it easy for you to avoid re-renders in new features by taking care of eliminating them at the root level.
+Avoiding re-renders in new features is now made easy by eliminating them at the root level.
 
-There's only one `useEffect` in the sidecar component `PageChangeEffect` that holds all the logic that should be executed on a page change.
+The `PageChangeEffect` sidecar component contains just one `useEffect` that holds all the logic to execute on a page change.
 
-That way you know that there's only one place that can trigger a re-render.
+That way you know that there's just one place that can trigger a re-render.
 
 ### Always think twice before adding `useEffect` in your codebase
 
 Re-renders are often caused by unnecessary `useEffect`.
 
-You should think whether the `useEffect` is really needed, or if you can move the logic in a event handler function.
+You should think whether you need `useEffect`, or if you can move the logic in a event handler function.
 
 You'll find it generally easy to move the logic in a `handleClick` or `handleChange` function.
 
@@ -79,7 +79,7 @@ You can also find them in libraries like Apollo: `onCompleted`, `onError`, etc.
 
 If you feel like you need to add a `useEffect` in your root component, you should consider extracting it in a sidecar component.
 
-The same can be applied for data fetching logic, with Apollo hooks.
+You can apply the same for data fetching logic, with Apollo hooks.
 
 ```tsx
 // ❌ Bad, will cause re-renders even if data is not changing, 
@@ -138,11 +138,11 @@ export const App = () => (
 
 Recoil family states and selectors are a great way to avoid re-renders.
 
-They are especially useful when you need to store a list of items.
+They are useful when you need to store a list of items.
 
 ### You shouldn't use `React.memo(MyComponent)`
 
-We do not recommend using `React.memo()` because it does not solve the cause of the re-render, but instead breaks the re-render chain, which can lead to unexpected behavior and make the code really hard to refactor.
+Avoid using `React.memo()` because it does not solve the cause of the re-render, but instead breaks the re-render chain, which can lead to unexpected behavior and make the code very hard to refactor.
 
 ### Limit `useCallback` or `useMemo` usage
 
@@ -150,9 +150,9 @@ They are often not necessary and will make the code harder to read and maintain 
 
 ## Console.logs
 
-`console.log` statements are invaluable during development, offering real-time insights into variable values and code flow. However, leaving them in production code can lead to several issues: 
+`console.log` statements are invaluable during development, offering real-time insights into variable values and code flow. But, leaving them in production code can lead to several issues: 
 
-1. **Performance**: Excessive logging can affect the runtime performance, especially on client-side applications.
+1. **Performance**: Excessive logging can affect the runtime performance, specially on client-side applications.
   
 2. **Security**: Logging sensitive data can expose critical information to anyone who inspects the browser's console.
 
@@ -169,7 +169,7 @@ Make sure you remove all `console.logs` before pushing the code to production.
 Variable names ought to precisely depict the purpose or function of the variable.
 
 #### The issue with generic names
-Generic names in programming are not ideal because they lack specificity, leading to ambiguity and reduced code readability. Such names fail to convey the variable or function's purpose, making it challenging for developers to understand the code's intent without deeper investigation. This can result in increased debugging time, higher susceptibility to errors, and difficulties in maintenance and collaboration. Descriptive naming, on the other hand, makes the code self-explanatory and easier to navigate, enhancing overall code quality and developer productivity.
+Generic names in programming are not ideal because they lack specificity, leading to ambiguity and reduced code readability. Such names fail to convey the variable or function's purpose, making it challenging for developers to understand the code's intent without deeper investigation. This can result in increased debugging time, higher susceptibility to errors, and difficulties in maintenance and collaboration. Meanwhile, descriptive naming makes the code self-explanatory and easier to navigate, enhancing code quality and developer productivity.
 
 ```tsx
 // ❌ Bad, uses a generic name that doesn't communicate its
@@ -206,11 +206,11 @@ const handleEmailChange = (val: string) => {
 
 ## Optional Props
 
-Avoid supplying the default value for an optional prop, as it generally doesn’t contribute significantly.
+Avoid passing the default value for an optional prop.
 
 **EXAMPLE**
 
-Assume, we have the `EmailField` component defined below:
+Take the`EmailField` component defined below:
 
 ```tsx
 type EmailFieldProps = {
@@ -223,7 +223,7 @@ const EmailField = ({ value, disabled = false }: EmailFieldProps) => (
 );
 ```
 
-**USAGE**
+**Usage**
 
 ```tsx
 // ❌ Bad, passing in the same value as the default value adds no value
@@ -260,13 +260,13 @@ For React to understand that the component is a component, you need to use Pasca
 
 ## Prop Drilling: Keep It Minimal
 
-Prop drilling, in the React context, refers to the practice of passing state variables and their setters through multiple component layers, even if intermediary components don't use them. While sometimes necessary, excessive prop drilling can lead to:
+Prop drilling, in the React context, refers to the practice of passing state variables and their setters through many component layers, even if intermediary components don't use them. While sometimes necessary, excessive prop drilling can lead to:
 
 1. **Decreased Readability**: Tracing where a prop originates or where it's utilized can become convoluted in a deeply nested component structure.
   
-2. **Maintenance Challenges**: Changes in one component's prop structure might necessitate adjustments in several components, even if they don't directly use the prop.
+2. **Maintenance Challenges**: Changes in one component's prop structure might require adjustments in several components, even if they don't directly use the prop.
 
-3. **Reduced Component Reusability**: A component receiving numerous props solely for the purpose of passing them down becomes less general-purpose and harder to reuse in different contexts.
+3. **Reduced Component Reusability**: A component receiving a lot of props solely for passing them down becomes less general-purpose and harder to reuse in different contexts.
 
 If you feel that you are using excessive prop drilling, see [state management best practices](/contributor/frontend/advanced/best-practices#state-management).
 
@@ -274,7 +274,7 @@ If you feel that you are using excessive prop drilling, see [state management be
 
 When importing, opt for the designated aliases rather than specifying complete or relative paths.
 
-**THE ALIASES**
+**The Aliases**
 
 ```js
 {
@@ -286,7 +286,7 @@ When importing, opt for the designated aliases rather than specifying complete o
 }
 ```
 
-**USAGE**
+**Usage**
 ```tsx
 // ❌ Bad, specifies the entire relative path
 import {
@@ -305,7 +305,7 @@ import { ComponentDecorator } from '~/testing/decorators/ComponentDecorator';=
 
 ## Schema Validation
 
-[Zod](https://github.com/colinhacks/zod) is used as the schema validator for untyped objects:
+[Zod](https://github.com/colinhacks/zod) is the schema validator for untyped objects:
 
 ```js
 const validationSchema = z
@@ -326,5 +326,5 @@ type Form = z.infer<typeof validationSchema>;
 
 ## Breaking Changes
 
-Prioritize thorough manual testing before proceeding to guarantee that modifications haven’t caused disruptions elsewhere, given that tests have not yet been extensively integrated.
+Always perform thorough manual testing before proceeding to guarantee that modifications haven’t caused disruptions elsewhere, given that tests have not yet been extensively integrated.
 
