--- a/docs/docs/contributor/frontend/advanced/hotkeys.mdx
+++ b/docs/docs/contributor/frontend/advanced/hotkeys.mdx
@@ -7,9 +7,9 @@ sidebar_custom_props:
 
 You can intercept any hotkey combination and execute a custom action.
 
-We added a thin wrapper on top of [react-hotkeys-hook](https://react-hotkeys-hook.vercel.app/docs/intro) to make it more performant and to avoid unnecessary re-renders.
+There's a thin wrapper on top of [react-hotkeys-hook](https://react-hotkeys-hook.vercel.app/docs/intro) that makes it more performant and avoids unnecessary re-renders.
 
-We also created a wrapper hook `useScopedHotkeys` to make it easy to manage scopes. 
+There's also a wrapper hook `useScopedHotkeys` that makes it easy to manage scopes. 
 
 ```ts
 useScopedHotkeys(
