--- a/docs/docs/contributor/frontend/basics/basics.mdx
+++ b/docs/docs/contributor/frontend/basics/basics.mdx
@@ -9,7 +9,7 @@ import DocCardList from '@theme/DocCardList';
 
 ## Tech Stack
 
-We took care of having a clean and simple stack, with minimal boilerplate code.
+The project has a clean and simple stack, with minimal boilerplate code.
 
 **App**
 
@@ -34,20 +34,20 @@ We took care of having a clean and simple stack, with minimal boilerplate code.
 
 ### Routing
 
-We use [React Router](https://reactrouter.com/) for routing. 
+[React Router](https://reactrouter.com/) handles the routing. 
 
-To avoid unnecessary [re-renders](/contributor/frontend/advanced/best-practices#managing-re-renders) we handle all the routing logic in a `useEffect` in `PageChangeEffect`.
+To avoid unnecessary [re-renders](/contributor/frontend/advanced/best-practices#managing-re-renders) all the routing logic is in a `useEffect` in `PageChangeEffect`.
 
 ### State Management
 
-We use [Recoil](https://recoiljs.org/docs/introduction/core-concepts) for state management.
+[Recoil](https://recoiljs.org/docs/introduction/core-concepts) handles state management.
 
-See our [best practices](/contributor/frontend/advanced/best-practices#state-management) for more information on state management.
+See [best practices](/contributor/frontend/advanced/best-practices#state-management) for more information on state management.
 
 ## Testing
 
-We use [Jest](https://jestjs.io/) for unit testing and [Storybook](https://storybook.js.org/) for component testing.
+[Jest](https://jestjs.io/) serves as the tool for unit testing while [Storybook](https://storybook.js.org/) is for component testing.
 
-Jest is mainly used for testing utility functions, and not components themselves.
+Jest is mainly for testing utility functions, and not components themselves.
 
-Storybook is used for testing the behavior of isolated components, as well as displaying our [design system](/contributor/frontend/basics/design-system).
+Storybook is for testing the behavior of isolated components, as well as displaying the [design system](/contributor/frontend/basics/design-system).
