--- a/docs/docs/contributor/frontend/basics/folder-architecture.mdx
+++ b/docs/docs/contributor/frontend/basics/folder-architecture.mdx
@@ -8,7 +8,7 @@ sidebar_custom_props:
 
 In this guide, you will explore the details of the project directory structure and how it contributes to the organization and maintainability of Twenty.
 
-By following this folder architecture convention, it is easier to find the files related to specific features and ensure that the application is scalable and maintainable.
+By following this folder architecture convention, it's easier to find the files related to specific features and ensure that the application is scalable and maintainable.
 
 ```
 front
@@ -27,12 +27,12 @@ front
 
 ## Pages
 
-Contains the top-level components that are defined by the application routes. They import more low-level components from the modules folder (more details below).
+Includes the top-level components defined by the application routes. They import more low-level components from the modules folder (more details below).
 
 ## Modules
 
 Each module represents a feature or a group of feature, comprising its specific components, states, and operational logic.
-They should all follow the structure below. You can nest modules within modules; we often refer to them as submodules but the same rules apply.
+They should all follow the structure below. You can nest modules within modules (referred to as submodules) and the same rules will apply.
 
 ```
 module1
@@ -67,7 +67,7 @@ See [GraphQL](https://graphql.org/learn/) for more details.
 
 - Fragments
 
-A fragment is a reusable piece of a query, which can be used in multiple places. By using fragments, it is easier to avoid duplicating code.
+A fragment is a reusable piece of a query, which you can use in different places. By using fragments, it's easier to avoid duplicating code.
 
 See [GraphQL Fragments](https://graphql.org/learn/queries/#fragments) for more details.
 
@@ -85,24 +85,24 @@ See [Hooks](https://react.dev/learn/reusing-logic-with-custom-hooks) for more de
 
 ### States
 
-Contains the state management logic. We use [RecoilJS](https://recoiljs.org) for this.
+Contains the state management logic. [RecoilJS](https://recoiljs.org) handles this.
 
 - Selectors: See [RecoilJS Selectors](https://recoiljs.org/docs/basic-tutorial/selectors) for more details.
 
-We still use React's built-in state management for state that is only used within a component.
+React's built-in state management still handles state within a component.
 
 ### Utils
 
-Should only contain reusable pure functions. Otherwise, create custom hooks in the `hooks` folder.
+Should just contain reusable pure functions. Otherwise, create custom hooks in the `hooks` folder.
 
 
 ## UI
 
-Contains all of the reusable UI components used in the application.
+Contains all the reusable UI components used in the application.
 
-This folder can contain subfolders, like `data`, `display`, `feedback`, and `input` for specific types of components. Each component should be self-contained and reusable, so that it can be used in multiple parts of the application.
+This folder can contain sub-folders, like `data`, `display`, `feedback`, and `input` for specific types of components. Each component should be self-contained and reusable, so that you can use it in different parts of the application.
 
-By separating the UI components from the other components in the `modules` folder, it is easier to maintain a consistent design and to make changes to the UI without affecting other parts (business logic) of the codebase.
+By separating the UI components from the other components in the `modules` folder, it's easier to maintain a consistent design and to make changes to the UI without affecting other parts (business logic) of the codebase.
 
 ## Interface and dependencies
 
@@ -110,4 +110,4 @@ You can import other module code from any module except for the `ui` folder. Thi
 
 ### Internal
 
-Each part (hooks, states, ...) of a module can have an `internal` folder, which contains parts that are only used within the module.
+Each part (hooks, states, ...) of a module can have an `internal` folder, which contains parts that are just used within the module.
