--- a/docs/docs/contributor/frontend/frontend.mdx
+++ b/docs/docs/contributor/frontend/frontend.mdx
@@ -8,6 +8,6 @@ sidebar_custom_props:
 ---
 
 Welcome to the Frontend Development section of the documentation. 
-Here you will find information about the frontend development process, the tools we use, and the best practices we follow.
+Here you will find information about the frontend development process, the recommended tools, and the best practices you should follow.
 
 
