--- a/docs/docs/contributor/local-setup/ide-setup.mdx
+++ b/docs/docs/contributor/local-setup/ide-setup.mdx
@@ -6,12 +6,12 @@ sidebar_custom_props:
   icon: TbBrandVscode
 ---
 
-This section will help you set up your IDE for the project. If you haven't set up your development environment, please refer to our [local setup](/contributor/local-setup) section.
+This section will help you set up your IDE for the project. If you haven't set up your development environment, please refer to the [local setup](/contributor/local-setup) section.
 
 
 ## Visual Studio Code
 
-You can use any IDE you want but we recommend using Visual Studio Code as our internal team uses it and we have a lot of extensions and settings that we can share with you.
+You can use any IDE you prefer, but Visual Studio Code is the choice of the core team, and has lots of extensions and settings to share with you.
 
 
 ### Step 1: Installation
@@ -20,7 +20,7 @@ You can download Visual Studio Code from [here](https://code.visualstudio.com/do
 
 ### Step 2: Open Project
 
-Once you have installed Visual Studio Code, you can open the project by clicking on `File > Open Folder` and selecting `twenty` project root folder.
+Once you install Visual Studio Code, you can open the project by clicking on `File > Open Folder` and selecting `twenty` project root folder.
 
 <div style={{textAlign: 'center'}}>
     <img src="/img/contributor/ide-project-open.png" alt="Visual Studio Code: Open Twenty project" width="90%" />
@@ -44,11 +44,11 @@ If you are using a [Docker setup](/contributor/local-setup/docker-setup), you wi
 </div>
 
 <br />
-VSCode will open a new window and you will be able to use it as you would normally do. The only difference is that you will be running VSCode inside the container and you will have access to all the tools and dependencies that are installed in the container.
+VSCode will open a new window and you will be able to use it as you would typically do. The only difference is that you will be running VSCode inside the container and you will have access to all the tools and dependencies installed in the container.
 
 <br /><br />
 If you stop your containers, you will need to restart them before opening the project in VSCode again.
 
 ## You are all set
 
-You are all set to start contributing to the project. If you have any questions, feel free to reach out to us on [Discord](https://twenty.com/discord).
+You are all set to start contributing to the project. If you have any questions, feel free to reach out to the team on [Discord](https://twenty.com/discord).
