--- a/docs/docs/contributor/server/others/zapier.mdx
+++ b/docs/docs/contributor/server/others/zapier.mdx
@@ -7,9 +7,9 @@ sidebar_custom_props:
 
 Effortlessly sync Twenty with 3000+ apps using [Zapier](https://zapier.com/). Automate tasks, boost productivity, and supercharge your customer relationships!
 
-## What is Zapier?
+## About Zapier
 
-Zapier is a tool that allows you automate workflows by connecting the apps that your team uses everyday. The fundamental concept of Zapier is automation workflows, which are known as Zaps, and include triggers and actions. 
+Zapier is a tool that allows you automate workflows by connecting the apps that your team uses everyday. The fundamental concept of Zapier is automation workflows, called Zaps, and include triggers and actions. 
 
 You can learn more about how Zapier works [here](https://zapier.com/how-it-works).  
 
