--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -7,14 +7,14 @@ custom_edit_url: null
 ---
 import ThemedImage from '@theme/ThemedImage';
 
-Twenty is an Open Source CRM that provides flexibility, tailored to your business needs. It helps you break free from vendor lock-in and limitations, and provides the tools needed to harness the full potential of your data while ensuring a sleek and effortlessly intuitive design that teams will love to use.  
+Twenty is an Open Source CRM that provides flexibility, tailored to your business needs. It helps you break free from vendor lock-in and limitations, and provides the tools you need to harness the full potential of your data while ensuring a sleek and effortlessly intuitive design that teams will love to use.  
 <ThemedImage sources={{light: "../img/light-doc-preview.png", dark:"../img/dark-doc-preview.png"}} style={{width:'100%', maxWidth:'800px'}}/>
 
 
-## Why did we create Twenty?
+## Idea Behind Twenty
 We’ve spent thousands of hours grappling with traditional CRMs like Pipedrive and Salesforce to align them with our business needs, only to end up frustrated—customizations are complex and the closed ecosystems of these platforms can feel restrictive.
 
-We felt the need for a CRM solution that empowers rather than constrains, which inspired us to create Twenty. We’re building the next-generation open-source CRM that offers you the flexibility to shape it according to your business objectives and meet your team’s unique needs. We’ve packed Twenty with powerful features to give you full control and help you win more deals. 
+The need for a CRM solution that empowers rather than constrains was clear, which inspired us to create Twenty. It's a next-generation open-source CRM that offers you the flexibility to shape it according to your business objectives and meet your team’s unique needs. Twenty is full of powerful features to give you full control and help you win more deals. 
 
 ## Getting started
 
@@ -23,13 +23,13 @@ There are three ways for you to get started with Twenty:
 - **Local:** If you're a developer and would like to experiment or contribute to the app
 - **Self-hosting:** If you want greater control over your data and want to run the app on your own server
 
-See our [Getting Started](./start/getting-started/) guide to learn more.
+See the [Getting Started](./start/getting-started/) guide to learn more.
 
 ## Contributing
 
-Contributions are what makes the open source community such an amazing place.  
+Contributions are what makes the open source community such a great place.  
 
-Code contributions through pull request are most welcome. See our [local setup guide](../contributor/local-setup) to get started.
+Code contributions through pull request are most welcome. See the [local setup guide](../contributor/local-setup) to get started.
 
-You can also contribute by creating an issue to report a bug you've spotted, joining our discussions or writing documentation.
+You can also contribute by creating an issue to report a bug you've spotted, joining discussions or writing documentation.
 
