--- a/docs/docs/start/getting-started.mdx
+++ b/docs/docs/start/getting-started.mdx
@@ -11,17 +11,17 @@ import TabItem from '@theme/TabItem';
 There are three ways for you to get started with Twenty:
 ### 1. Cloud
 
-The easiest way to quickly try the app is to signup on [app.twenty.com](https://app.twenty.com).
+The easiest way to try the app is to sign up on [app.twenty.com](https://app.twenty.com).
 
-The signup is free.
+The sign-up is free.
 
 <ThemedImage sources={{light: "/img/light-sign-in.png", dark:"/img/dark-sign-in.png"}} style={{width:'100%', maxWidth:'800px'}}/>
 
 ### 2. Local
-If you're a developer and would like to experiment or contribute to the app, you can install Twenty on your local environment. Follow our [local setup](/contributor/local-setup) guide to get started.  
+If you're a developer and would like to experiment or contribute to the app, you can install Twenty on your local environment. Follow the [local setup](/contributor/local-setup) guide to get started.  
 
 ### 3. Self-hosting
-We provide [self-hosting options](/start/self-hosting) if you want greater control over your data and want to run the app on your own server. Right now, Docker containers are the only hosting option we support. However we are actively working on providing simple options to self-host Twenty.
+You can also find [self-hosting options](/start/self-hosting) if you want greater control over your data and want to run the app on your own server. Right now, Docker containers are the only hosting option available, with more simple options to self-host Twenty coming soon.
 
 
 ___
